// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<div
  className="container"
  id={undefined}
  onChange={undefined}
>
  <div
    className="column"
  >
    <span
      className="wrapper"
    >
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={undefined}
        id="_teatime1"
        name="control"
        onChange={[Function]}
        type="checkbox"
        value="aa"
      />
      <label
        className="control"
        htmlFor="_teatime1"
      />
      <label
        className="label"
        htmlFor="_teatime1"
      >
        AA
      </label>
    </span>
    <span
      className="wrapper"
    >
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={undefined}
        id="_teatime2"
        name="control"
        onChange={[Function]}
        type="checkbox"
        value="bb"
      />
      <label
        className="control"
        htmlFor="_teatime2"
      />
      <label
        className="label"
        htmlFor="_teatime2"
      >
        BB
      </label>
    </span>
    <span
      className="wrapper"
    >
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={undefined}
        id="_teatime3"
        name="control"
        onChange={[Function]}
        type="checkbox"
        value="cc"
      />
      <label
        className="control"
        htmlFor="_teatime3"
      />
      <label
        className="label"
        htmlFor="_teatime3"
      >
        CC
      </label>
    </span>
  </div>
</div>
`;

exports[`Renders correctly with defined props 1`] = `
<div
  className="container outer"
  id="controls-id"
  onChange={undefined}
>
  <div
    className="column"
  >
    <span
      className="wrapper"
    >
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={true}
        id="_teatime4"
        name="control"
        onChange={[Function]}
        type="checkbox"
        value="aa"
      />
      <label
        className="control"
        htmlFor="_teatime4"
      />
      <label
        className="label"
        htmlFor="_teatime4"
      >
        AA
      </label>
    </span>
    <span
      className="wrapper"
    >
      <input
        checked={true}
        className="native"
        defaultValue={undefined}
        disabled={true}
        id="_teatime5"
        name="control"
        onChange={[Function]}
        type="checkbox"
        value="bb"
      />
      <label
        className="control"
        htmlFor="_teatime5"
      />
      <label
        className="label"
        htmlFor="_teatime5"
      >
        BB
      </label>
    </span>
  </div>
  <div
    className="column"
  >
    <span
      className="wrapper"
    >
      <input
        checked={true}
        className="native"
        defaultValue={undefined}
        disabled={true}
        id="_teatime6"
        name="control"
        onChange={[Function]}
        type="checkbox"
        value="cc"
      />
      <label
        className="control"
        htmlFor="_teatime6"
      />
      <label
        className="label"
        htmlFor="_teatime6"
      >
        CC
      </label>
    </span>
  </div>
</div>
`;
